[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "varnish"
version = "0.0.0"
authors = [
    { name = "Julian Bilcke", email = "julian.bilcke@huggingface.co" }
]
description = "A comprehensive video enhancement library designed for AI-generated videos."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    'torch>=2.5.1',
    'torchvision>=0.16.0',
    'numpy>=1.26.0,<2.1',
    'Pillow==9.5.0',
    'opencv-python>=4.10.0.84',
    'moviepy==1.0.3',
    'scikit-video>=1.1.11',
    'av>=14.0.1',
    'accelerate>=0.34.2',
    'safetensors>=0.4.5',
    'spandrel>=0.4.0',
    'transformers>=4.44.0',
    'sentencepiece>=0.2.0',
    'diffusers @ git+https://github.com/huggingface/diffusers.git@main',
    'mmaudio @ git+https://github.com/hkchengrex/MMAudio.git@45f44e067c6451d5e646b494bc962724882c003c',
    'huggingface_hub>=0.26',
    'librosa>=0.8.1',
    'torchaudio>=2.2.0',
    'tqdm>=4.66.5',
    'einops>=0.6',
    'hydra-core>=1.3.2',
    'hydra_colorlog',
    'tensorboard>=2.11',
    'tensordict>=0.6.1',
    'requests>=2.31.0',
    'colorlog>=6.7.0',
    'spaces>=0.29.3',
    'torchdiffeq>=0.2.5',
    'nitrous-ema',
    'open_clip_torch>=2.29.0',
    'timm>=1.0.12',
]

[project.urls]
Homepage = "https://github.com/jbilcke-hf/varnish"
Documentation = "https://github.com/jbilcke-hf/varnish"
Repository = "https://github.com/jbilcke-hf/varnish.git"
Issues = "https://github.com/jbilcke-hf/varnish/issues"

[tool.hatch.build.targets.wheel]
packages = ["varnish"]

[tool.setuptools.packages.find]
include = ["varnish*"]
exclude = [".github", "example.py"]

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
column_limit = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=varnish"
